# guane-intern-fastapi

./: README.md  commands.txt  docker-compose.yml
app/: .env  Dockerfile  conftest.py  initializer.py  load_data.py  main.py  pyproject.toml  requirements.txt
app/config/: __init__.py  db_config.py  general_config.py  parameters.py
app/config/database/: pg.py
app/core/dependencies/: oauth2.py
app/core/models/: __init__.py  animals.py  auth.py
app/core/routers/: __init__.py  animals.py  files.py  security.py  users.py
app/core/schemas/: animals.py  security.py  user.py
app/core/utils/: __init__.py  hashing.py  jwt_token.py
app/dependencies/: oauth2.py
app/models/: __init__.py  animals.py  auth.py
app/routers/: animals.py  security.py  users.py
app/schemas/: __init__.py  animals.py  security.py  user.py
app/tests/: load_data.py
app/tests/test_routers/: test_animals.py  test_security.py  test_user.py
app/utils/: hashing.py  jwt_token.py
app/worker/: __init__.py  worker.py
docs/: commands.txt
