[tool.poetry]
name = "guane-intern-fastapi"
version = "0.1.0"
description = ""
authors = ["denis <deniseduardoisidrogonzalez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.8"}
aerich = "^0.5.8"
celery = "^5.1.2"
redis = "^3.5.3"
flower = "^1.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
